# aws-ssm-calendar-generator

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  PROJECT_SUMMARY.md  README.md  RELEASE_NOTES.md  TASK_ALIGNMENT_REPORT.md  holidays.ics  holidays_2025.ics  holidays_2025_only.ics  holidays_current_and_next.ics  holidays_current_onwards.ics  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml
.kiro/specs/aws-ssm-calendar-generator/: design.md  requirements.md  tasks.md
aws_ssm_calendar_ics_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: api_reference.md  command_line_reference.md  comprehensive_api_reference.md  customization_and_extension_guide.md  developer_architecture_guide.md  installation_and_setup_guide.md  japanese_holidays_specification.md  technical_specification.md  troubleshooting_and_faq.md  usage_guide_and_best_practices.md  user_manual.md
examples/: README.md
examples/advanced_usage/: batch_calendar_generator.py
examples/basic_usage/: business_day_calculator.py  generate_yearly_calendar.py  simple_holiday_check.py
examples/ci_cd/github_actions/: comprehensive_pipeline.yml
examples/configuration/: advanced_config_templates.json  aws_policies.json  config_examples.json  environment_variables.env
examples/deployment/docker/: Dockerfile.production  docker-compose.yml
examples/deployment/kubernetes/: deployment.yaml
examples/infrastructure/terraform/: main.tf  outputs.tf  variables.tf
examples/integration_examples/github_actions/: holiday-calendar-sync.yml
examples/integration_examples/terraform_integration/: main.tf
scripts/: pypi_preparation.py  quality_check.py  version_management.py
src/: aws_client.py  calendar_analyzer.py  change_calendar_manager.py  cli.py  config.py  error_handler.py  event_parser.py  ics_generator.py  japanese_holidays.py  logging_config.py  security.py
tests/: conftest.py
tests/integration/: test_cli_integration.py  test_end_to_end.py  test_final_integration_verification.py
tests/performance/: __init__.py  test_performance_benchmarks.py
tests/unit/: test_aws_client.py  test_config.py  test_japanese_holidays.py  test_security.py
